force-app/main/default/objects/OrderSummary/fields/is_Guest_Order__c.field-meta.xml
<CustomField>
    <fullName>is_Guest_Order__c</fullName>
    <formula>OriginalOrder.is_Guest_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Guest Order</label>
    <type>Checkbox</type>
</CustomField>