force-app/main/default/objects/OrderSummary/fields/IsSubscriptionOrder__c.field-meta.xml
<CustomField>
    <fullName>IsSubscriptionOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >The original order is part of a subscription (either the initial order, or any recurring order)</description>
    <inlineHelpText
  >The original order is part of a subscription (either the initial order, or any recurring order)</inlineHelpText>
    <label>Subscription Order</label>
    <type>Checkbox</type>
</CustomField>