force-app/main/default/objects/OrderSummary/fields/Magento_SaleChannel_Name__c.field-meta.xml
<CustomField>
    <fullName>Magento_SaleChannel_Name__c</fullName>
    <formula>OriginalOrder.Magento_SalesChannel_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Magento SaleChannel Name</label>
    <type>Text</type>
</CustomField>