force-app/main/default/objects/OrderSummary/fields/Order_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Invoice_Id__c</fullName>
    <formula>OriginalOrder.InvoiceID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Invoice Id</label>
    <type>Text</type>
</CustomField>