force-app/main/default/objects/OrderSummary/fields/SalesChannel_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>SalesChannel_Country_Code__c</fullName>
    <formula>OriginalOrder.SalesChannelCountryCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SalesChannel Country Code</label>
    <type>Text</type>
</CustomField>