force-app/main/default/objects/OrderSummary/fields/TotalAdjustmentAmtWithTax__c.field-meta.xml
<CustomField>
    <fullName>TotalAdjustmentAmtWithTax__c</fullName>
    <label>Adjustments with Tax</label>
    <summarizedField>OrderItemSummary.TotalAdjustmentAmtWithTax</summarizedField>
    <summaryForeignKey>OrderItemSummary.OrderSummaryId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>