force-app/main/default/objects/OrderSummary/fields/TotalOrderAmountWithTax__c.field-meta.xml
<CustomField>
    <fullName>TotalOrderAmountWithTax__c</fullName>
    <description>All orderlines, including shipping.</description>
    <label>Total Order Amount with Tax</label>
    <summarizedField>OrderItemSummary.TotalLineAmountWithTax</summarizedField>
    <summaryForeignKey>OrderItemSummary.OrderSummaryId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>