force-app/main/default/objects/OrderSummary/listViews/All_L_OR_Orders.listView-meta.xml
<ListView>
    <fullName>All_L_OR_Orders</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>GrandTotalAmount</columns>
    <columns>OrderedDate</columns>
    <columns>Status</columns>
    <columns>SalesChannel</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SalesChannel</field>
        <operation>contains</operation>
        <value>L&apos;Or</value>
    </filters>
    <label>All L&apos;OR Orders</label>
</ListView>