force-app/main/default/objects/OrderSummary/listViews/all_order_summaries.listView-meta.xml
<ListView>
    <fullName>all_order_summaries</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>OrderedDate</columns>
    <columns>GrandTotalAmount</columns>
    <columns>SalesChannel</columns>
    <columns>CreatedDate</columns>
    <columns>TotalOrderAmountWithTax__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Orders</label>
</ListView>