force-app/main/default/objects/OrderSummary/listViews/All_Tassimo_Orders.listView-meta.xml
<ListView>
    <fullName>All_Tassimo_Orders</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>GrandTotalAmount</columns>
    <columns>OrderedDate</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SalesChannel</field>
        <operation>contains</operation>
        <value>Tassimo</value>
    </filters>
    <label>All Tassimo Orders</label>
</ListView>