force-app/main/default/objects/OrderSummary/listViews/Allocated_but_Not_Shipped.listView-meta.xml
<ListView>
    <fullName>Allocated_but_Not_Shipped</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>GrandTotalAmount</columns>
    <columns>OrderedDate</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>ALLOCATED</value>
    </filters>
    <label>Allocated but Not Shipped</label>
</ListView>