force-app/main/default/objects/OrderSummary/listViews/Cancelled_Orders.listView-meta.xml
<ListView>
    <fullName>Cancelled_Orders</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>GrandTotalAmount</columns>
    <columns>OrderedDate</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>CANCELLED</value>
    </filters>
    <label>Cancelled Orders</label>
</ListView>